# geometry-dash-external-editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg-configuration.json  vcpkg.json
Addons/test/: main.py
src/: CMakeLists.txt  gdee.cpp  gdee.h  main.cpp
src/Python/: Addon.cpp  Addon.h  AddonManager.cpp  AddonManager.h  addon_manager.cpp  addon_manager.h  generic_addon.cpp  generic_addon.h  python.cpp
src/Python/API/: gdee.cpp  gdee.h  imgui.cpp  imgui.h  ui.cpp  ui.h
src/Python/Module/: gdee.cpp  gdee.h  main.cpp  ui.cpp  ui.h
src/UI/: CustomImGui.cpp  CustomImGui.h  UIManager.cpp  UIManager.h  base_window.cpp  base_window.h  main_window.cpp  main_window.h  ui.cpp  ui.h  ui_manager.cpp  ui_manager.h
